Z-index Fix + signup fixes

--- a/main.css
+++ b/main.css
@@ -235,7 +235,7 @@ border-radius: 6px;
   height: 120vh;
   border: none;
   background-color: white;
-  z-index: 15;}
+  z-index: 98;}
 
 #cartpage {display: none;}
 
